put lat, lon and key in the configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeatherForecast": {
+    "Latitude": 45.75,
+    "Longtitude": 25.3333,
+    "ApiKey": "296fdb9285895cabcdfc3c45eace9209"
+  }
 }
