--- a/InternshipMvc.csproj
+++ b/InternshipMvc.csproj
@@ -13,10 +13,13 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="RestClient" Version="3.446.20952" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
