--- a/InternshipMvc.Tests/InternshipMvc.Tests.csproj
+++ b/InternshipMvc.Tests/InternshipMvc.Tests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="weatherForecast.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="weatherForecast.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
