--- a/InternshipMvc.csproj
+++ b/InternshipMvc.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="RestClient" Version="3.446.20952" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
