replaced Program.cs, replaced connection string, changed server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-6H325769\\SQLEXPRESS;Database=internship;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=internshipclass;User Id=internshipclassadmin;Password=i2weE6UV9Hjd"
+    //"DefaultConnection": "Server=LAPTOP-6H325769\\SQLEXPRESS;Database=internship;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
