added defaultLocation to use it when addin a new member.

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,6 @@
     "Latitude": 45.75,
     "Longtitude": 25.3333,
     "ApiKey": "296fdb9285895cabcdfc3c45eace9209"
-  }
+  },
+  "DefaultLocation":  "Brasov"
 }
